test/riscv/error/compiler/test_riscv_error_compiler_019.out


Error: found "x" but expected one of "\n", end of input, ","
   ╭─[assembly:7:12]
   │
 7 │     .byte 0x
   │            ┬  
   │            ╰── Unexpected input
   │            │  
   │            ╰── while parsing this expression
───╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

